# py_frame_redirect

./: .gitignore  MANIFEST.in  Makefile  demo.py  py_frame_redirect.c  py_frame_redirect.h  redirect.py  setup.cfg  setup.py
src/frame_rop/: __init__.py  generator_headers.py  generators.py  lib.py  redirect.py  selector.py
src/frame_rop/c_lib/lib/: frame_3_11.h  frame_3_13.h  frame_redirect.h  macro_expansion.h  py_frame_3_11.h  py_frame_3_13.h  py_frame_redirect.h
src/frame_rop/c_lib/src/: frame_3_11.c  py_frame_redirect.c
test/: demo.py  test_class_methods.py  test_function_calls.py  test_generator.py
