[metadata]
name = frame_rop 
description = "Return-oriented programming on Python frames"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/quollnest/frame_rop

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = ~=3.8

install_requires =
    pytest 

[options.packages.find]
where = src

[options.package_data]
frame_rop = c_lib/*.so

[options.extras_require]
dev =
    pytest~=6.2
